[gd_scene load_steps=18 format=3 uid="uid://dql6aufqubrsi"]

[ext_resource type="Script" path="res://assets/UI/ui.gd" id="1_6io2n"]
[ext_resource type="LabelSettings" uid="uid://c6juy32odjefi" path="res://assets/UI/PB-font.tres" id="1_jk8j8"]
[ext_resource type="PackedScene" uid="uid://o3mjmew4gp7l" path="res://menut/pause_menu.tscn" id="2_07eyq"]
[ext_resource type="LabelSettings" uid="uid://cbisq0vmaf2xo" path="res://assets/UI/Jam-font.tres" id="2_khqc4"]
[ext_resource type="Texture2D" uid="uid://ya8oqlr3878u" path="res://assets/graphics/PBTROOPS.png" id="2_ywk2c"]
[ext_resource type="Texture2D" uid="uid://cac3suy7l3xvd" path="res://assets/graphics/scoretoast.png" id="3_77fma"]
[ext_resource type="Texture2D" uid="uid://crb37kb5u8udk" path="res://assets/graphics/pbnuoli.png" id="4_vhlj3"]
[ext_resource type="Theme" uid="uid://ctvo3yacafgri" path="res://assets/teemat/menuTeema.tres" id="5_akvru"]
[ext_resource type="Texture2D" uid="uid://cr2m3ygrddp8g" path="res://assets/graphics/JAMTROOPS.png" id="5_n020l"]
[ext_resource type="Texture2D" uid="uid://cjwvywjtd57ey" path="res://assets/graphics/jamnuoli.png" id="5_or86i"]
[ext_resource type="Texture2D" uid="uid://bremh1rt2kyi7" path="res://assets/graphics/pause.png" id="5_x80d5"]
[ext_resource type="Texture2D" uid="uid://hmb2ba4fefc0" path="res://assets/graphics/paahdin.png" id="6_p6w8c"]
[ext_resource type="Texture2D" uid="uid://bsuoknpoe2mgb" path="res://assets/graphics/turn.png" id="7_ayoae"]
[ext_resource type="AudioStream" uid="uid://ffnax0o6akvs" path="res://assets/sounds/click.wav" id="7_s5bsp"]
[ext_resource type="FontFile" uid="uid://gbq5lp8rmpti" path="res://assets/fonts/Antonio-Bold.ttf" id="9_3bru6"]
[ext_resource type="Texture2D" uid="uid://xqou3e8lgfoj" path="res://assets/graphics/1. kohdistuskerros.png" id="10_87c18"]

[sub_resource type="LabelSettings" id="LabelSettings_tie47"]
font = ExtResource("9_3bru6")
font_size = 50
font_color = Color(0.913725, 0.729412, 0.282353, 1)
outline_color = Color(0.639216, 0.458824, 0.101961, 1)
shadow_size = 8
shadow_color = Color(0.639216, 0.458824, 0.101961, 1)
shadow_offset = Vector2(1, 2)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_6io2n")

[node name="PBTroopCounter" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.05
anchor_top = 0.8
anchor_right = 0.2
anchor_bottom = 0.95
offset_top = -650.0
offset_right = 40.0
offset_bottom = -610.0
grow_vertical = 0

[node name="Label" type="Sprite2D" parent="PBTroopCounter"]
position = Vector2(195, 95)
texture = ExtResource("2_ywk2c")

[node name="leipä" type="Sprite2D" parent="PBTroopCounter"]
position = Vector2(265, -10)
texture = ExtResource("3_77fma")

[node name="PBTroopCount" type="Label" parent="PBTroopCounter"]
layout_mode = 0
offset_left = 210.0
offset_top = -40.0
offset_right = 310.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 30
text = "5"
label_settings = ExtResource("1_jk8j8")
horizontal_alignment = 1

[node name="JamTroopCounter" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.8
anchor_top = 0.8
anchor_right = 0.95
anchor_bottom = 0.95
offset_left = 14.0
offset_top = -650.0
offset_right = 36.0
offset_bottom = -632.0
grow_vertical = 0

[node name="Label" type="Sprite2D" parent="JamTroopCounter"]
position = Vector2(85, 80)
texture = ExtResource("5_n020l")

[node name="leipä" type="Sprite2D" parent="JamTroopCounter"]
position = Vector2(10, -10)
texture = ExtResource("3_77fma")

[node name="JamTroopCount" type="Label" parent="JamTroopCounter"]
layout_mode = 2
offset_left = -40.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 30
text = "5"
label_settings = ExtResource("2_khqc4")
horizontal_alignment = 1

[node name="TurnCounter" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.35
anchor_top = 0.05
anchor_right = 0.65
anchor_bottom = 0.2
offset_right = 40.0
offset_bottom = 40.0

[node name="PBArrow" type="Sprite2D" parent="TurnCounter"]
position = Vector2(-25, 155)
texture = ExtResource("4_vhlj3")

[node name="JamArrow" type="Sprite2D" parent="TurnCounter"]
position = Vector2(605, 155)
texture = ExtResource("5_or86i")

[node name="VBoxContainer" type="VBoxContainer" parent="TurnCounter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -101.0
offset_right = 68.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -10

[node name="Turn" type="Sprite2D" parent="TurnCounter/VBoxContainer"]
position = Vector2(50, 145)
texture = ExtResource("6_p6w8c")

[node name="turntext" type="Sprite2D" parent="TurnCounter/VBoxContainer/Turn"]
position = Vector2(0, -25)
texture = ExtResource("7_ayoae")

[node name="TurnNumber" type="Label" parent="TurnCounter/VBoxContainer/Turn"]
offset_left = -125.0
offset_right = 125.0
offset_bottom = 76.0
theme = ExtResource("5_akvru")
text = "1
"
label_settings = SubResource("LabelSettings_tie47")
horizontal_alignment = 1

[node name="PauseButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.04
anchor_bottom = 0.04
offset_left = -18.4
offset_top = -1.6
offset_right = 143.2
offset_bottom = 36.8
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Sprite2D" type="Sprite2D" parent="PauseButton"]
texture = ExtResource("5_x80d5")
centered = false

[node name="PauseMenu" parent="." instance=ExtResource("2_07eyq")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="buttonsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_s5bsp")

[node name="1_Kohdistuskerros" type="Sprite2D" parent="."]
visible = false
z_index = -100
position = Vector2(960, 540)
texture = ExtResource("10_87c18")

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
